[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Cameron <cameronwood858@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyprojroot = "^0.3.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
